<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp"
    android:layout_margin="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:background="@android:color/transparent"
        android:layoutDirection="ltr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical">

            <com.apadanah.crypto_news.presentation.util.custom_view.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                style="@style/TextAppearance.Title01"
                android:text="@string/failed_network_title"
                />


            <com.apadanah.crypto_news.presentation.util.custom_view.CustomTextView
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                style="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/failed_network_description"
                />


            <Button
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/ok"
                android:textSize="15sp"
                />

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>